
Change Log Update (00.00.33)
* 2016-03-28
+ Completed most of the stub for Logon Module for Login and Password Sequences
  Database lookup for user and password must be completed.  However, the signup
  and accounts needs to be created first for test.
+ Create Module Signup, initial stubbing completed for new user application.
- Also setup Session_Data->Emulation for ANSI or ASCII no color.
  Have to work out the stubs for removing all pipe color codes from prompts when
  in ASCII mode instead of having separate prompts.  Same with ANSI screens .ASC instead of .ANS
  default will be generic menus.  Test with Matrix first.

Change Log Update (00.00.32)
* 2016-03-27
+ Completed Use Codepage selections in PreLogon Module.
+ PreLogon module is now completed with initial detection phases.
  Moving on to the Logon Module for the Matrix login, and NewUser Module
  for new user accounts.
+ Adding CR\LF replacement to LF on incoming data.  Windows Console Telnet
  Likes to send CR\LF for [ENTER] instead of a single key.

Change Log Update (00.00.31)
* 2016-03-27
+ Working on more of the PreLogon process, When ANSI is not detected it will
  ask to use colors or ASCII no color.  Next need to work on codepage output
  CP437 or UTF-8.  
- Also look at the NEW_ENV Telnet options when I get some more time.

Change Log Update (00.00.30)
* 2016-03-27
+ Worked out NEW_ENV Telnet options were locking up Windows Console Telnet.
  For now I've commented this out to look into at a later date.

Change Log Update (00.00.29)
* 2016-03-26
+ Prompts are not working for Terminal Detection (Telnet Option Parsing)
  When completed, now displays detected terminal 'ansi' and size '80x25' etc..
+ Prelogon Emulation Detection is working, sending ESC[6n and getting a response
  from the client,  ESC[xx;xxR for current X/Y Position showing the client 
  can use ESC sequence
+ Also added a new Detection Timer for 1.5 seconds to receive client response
  for ESC[6n query.